--- a/modScore.code/package.json
+++ b/modScore.code/package.json
@@ -1,7 +1,7 @@
 {
   "name": "underscores",
   "version": "1.0.0",
-  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+  "description": "Hi. I'm a starter theme called _s, or underscores. I'm meant for hacking so don't use me as a Parent Theme. Turn me into the next awesome WordPress theme!",
   "author": "Automattic Theme Team",
   "license": "GPL-2.0-or-later",
   "keywords": [
@@ -19,8 +19,9 @@
   "devDependencies": {
     "@wordpress/scripts": "^19.2.2",
     "dir-archiver": "^1.1.1",
-    "node-sass": "^7.0.1",
-    "rtlcss": "^3.5.0"
+    "sass": "^1.76.0",
+    "rtlcss": "^3.5.0",
+    "stylelint": "^15.0.0"
   },
   "rtlcssConfig": {
     "options": {
@@ -36,8 +37,8 @@
     "map": false
   },
   "scripts": {
-    "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
-    "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
+    "watch": "sass --watch sass/:./ --style=expanded --source-map",
+    "compile:css": "sass sass/:./ --style=expanded && stylelint '*.css' --fix || true",
     "compile:rtl": "rtlcss style.css style-rtl.css",
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
